--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="components/loader.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="components/loader.js"></script>
-  <script src="js/ncmb-2.1.1.min.js"></script>
+  <script src="js/ncmb-2.1.3.min.js"></script>
   <script>
     $(function() {
             //mBaaSの初期化
@@ -49,10 +49,23 @@
                return false;
              });
        });
+       
+ //       $(function () {
+ //        setTimeout('rect()'); //アニメーションを実行
+ //        });
+ // 
+ //        function rect() {
+ //            $('.watage').animate({
+ //                marginTop: '-=10px'
+ //            }, 800).animate({
+ //                marginTop: '+=10px'
+ //            }, 800);
+ //            setTimeout('rect()', 1600); //アニメーションを繰り返す間隔
+ //        }
      </script>
    </head>
    <body>
-    <div><img src="img/watage.png" alt="わたげちゃん" /></div>
+    <div class="watage"><img src="img/watage.png" alt="わたげちゃん" /></div>
     <form>
       <input type="text" id="username" placeholder="User name"/>
       <input type="password" id="password" placeholder="password"/>
