show.htmlのスタイル変更

--- a/www/home.html
+++ b/www/home.html
@@ -64,7 +64,7 @@
 <body>
     <div id ="youkoso"></div>
     <img src="img/watage_2.png" alt="わたげちゃん" class="watage"/>
-        <div>
+        <div class="homebutton">
         <input id="okuru" type="image" src="img/tobasu_button.png" >
         <input id="deau" type="image" src="img/deau_button.png">
         </div>
